--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <!-- Moosend Tracking / Verification -->
     <script>
       //load TrackerJS
@@ -19,6 +20,8 @@
     <title>Good News Co</title>
   </head>
   <body>
-    <h1>Good News Co</h1>
+    <div id="main">
+      <img src="assets/IMG_0240.PNG" alt="Good News Co Logo" />
+    </div>
   </body>
 </html>
